--- a/PT_Assistant/res/layout/activity_display_message.xml
+++ b/PT_Assistant/res/layout/activity_display_message.xml
@@ -3,6 +3,6 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pt_assistant_sergio.DisplayMessageActivity"
+    tools:context="com.example.pt_assistant.DisplayMessageActivity"
     tools:ignore="MergeRootFrame" />
 
