--- a/PT_Assistant/res/layout/fragment_display_message.xml
+++ b/PT_Assistant/res/layout/fragment_display_message.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.pt_assistant_sergio.DisplayMessageActivity$PlaceholderFragment" >
+    tools:context="com.example.pt_assistant.DisplayMessageActivity$PlaceholderFragment" >
 
     <TextView
         android:layout_width="wrap_content"
