--- a/PT_Assistant/res/layout/fragment_main.xml
+++ b/PT_Assistant/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.pt_assistant_sergio.MainActivity$PlaceholderFragment" 
+    tools:context="com.example.pt_assistant.MainActivity$PlaceholderFragment" 
     android:orientation= "horizontal" >
      <EditText android:id="@+id/edit_message"
         android:layout_weight="1"
