--- a/PT_Assistant/res/menu/activity_main_actions.xml
+++ b/PT_Assistant/res/menu/activity_main_actions.xml
@@ -13,5 +13,9 @@
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:showAsAction="collapseActionView|always"/>
+    
+    <item android:id="@+id/action_register_patient"
+          android:title="@string/action_register_patient"
+          android:showAsAction="collapseActionView|always"/>
 
 </menu>
