--- a/PT_Assistant/res/layout/fragment_main.xml
+++ b/PT_Assistant/res/layout/fragment_main.xml
@@ -21,9 +21,9 @@
           	android:hint="@string/edit_message" />
      </LinearLayout>
     
-    <LinearLayout 
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent" 
+        android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <Button
@@ -31,6 +31,19 @@
             android:layout_height="wrap_content"
             android:onClick="createPatient"
             android:text="@string/button_Register" />
+
+     </LinearLayout>
+     
+     <LinearLayout 
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent" 
+        android:orientation="vertical" >
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="getPatientList"
+            android:text="@string/button_getPatientList" />
 
      </LinearLayout>
    
