--- a/PT_Assistant/res/layout/fragment_subjective_notes.xml
+++ b/PT_Assistant/res/layout/fragment_subjective_notes.xml
@@ -9,7 +9,7 @@
     tools:context="com.example.pt_assistant.SubjectiveNotes$PlaceholderFragment" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textViewPastDiag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -20,90 +20,90 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editMedications"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_below="@+id/textView2"
+        android:layout_alignLeft="@+id/textViewMedication"
+        android:layout_below="@+id/textViewMedication"
         android:ems="10" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/editPastDiag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
+        android:layout_alignLeft="@+id/textViewPastDiag"
+        android:layout_below="@+id/textViewPastDiag"
         android:ems="10" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/editOther"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_below="@+id/textView3"
+        android:layout_alignLeft="@+id/textViewOther"
+        android:layout_below="@+id/textViewOther"
         android:ems="10" >
 
         <requestFocus />
     </EditText>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewOther"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_below="@+id/editText2"
+        android:layout_alignLeft="@+id/editMedications"
+        android:layout_below="@+id/editMedications"
         android:layout_marginTop="20dp"
         android:text="Other"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewMedication"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText1"
-        android:layout_below="@+id/editText1"
+        android:layout_alignLeft="@+id/editPastDiag"
+        android:layout_below="@+id/editPastDiag"
         android:layout_marginTop="20dp"
         android:text="Medications"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewGoals"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText3"
-        android:layout_below="@+id/editText3"
+        android:layout_alignLeft="@+id/editOther"
+        android:layout_below="@+id/editOther"
         android:layout_marginTop="45dp"
         android:text="Goals"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/editGoals"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_below="@+id/textView4"
+        android:layout_alignLeft="@+id/textViewGoals"
+        android:layout_below="@+id/textViewGoals"
         android:ems="10" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textViewReason"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText4"
-        android:layout_below="@+id/editText4"
+        android:layout_alignLeft="@+id/editGoals"
+        android:layout_below="@+id/editGoals"
         android:layout_marginTop="21dp"
         android:text="Reason"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/editReason"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_below="@+id/textView5"
+        android:layout_alignLeft="@+id/textViewReason"
+        android:layout_below="@+id/textViewReason"
         android:ems="10" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textViewHistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -112,11 +112,11 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textViewObjectives"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView6"
-        android:layout_below="@+id/editText3"
+        android:layout_alignLeft="@+id/textViewHistory"
+        android:layout_below="@+id/editOther"
         android:layout_marginTop="16dp"
         android:text="Patient Objectives"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -128,6 +128,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:onClick="setSubjective"
         android:text="Next" />
 
 </RelativeLayout>
