--- a/PT_Assistant/res/layout/fragment_objective_notes.xml
+++ b/PT_Assistant/res/layout/fragment_objective_notes.xml
@@ -1,5 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -156,3 +159,4 @@
         android:layout_below="@+id/seekBarROM" />
 
 </RelativeLayout>
+</ScrollView>
