--- a/PT_Assistant/res/layout/fragment_subjective_notes.xml
+++ b/PT_Assistant/res/layout/fragment_subjective_notes.xml
@@ -1,5 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -132,3 +135,4 @@
         android:text="Next" />
 
 </RelativeLayout>
+</ScrollView>
