--- a/PT_Assistant/res/layout/fragment_main.xml
+++ b/PT_Assistant/res/layout/fragment_main.xml
@@ -45,6 +45,12 @@
             android:onClick="getPatientList"
             android:text="@string/button_getPatientList" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="doReportStuff"
+            android:text="@string/button_report" />
+
      </LinearLayout>
    
 </LinearLayout >
