--- a/PT_Assistant/res/layout/fragment_objective_notes.xml
+++ b/PT_Assistant/res/layout/fragment_objective_notes.xml
@@ -2,9 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
+
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="440dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -128,6 +129,7 @@
         android:layout_alignLeft="@+id/seekBarPalpation"
         android:layout_below="@+id/seekBarPalpation"
         android:layout_marginTop="56dp"
+        android:onClick="lookupInjury"
         android:text="Injury Lookup" />
 
     <EditText
@@ -141,6 +143,13 @@
         <requestFocus />
     </EditText>
 
+    <TextView
+        android:id="@+id/textViewROMCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/seekBarROM"
+        android:layout_below="@+id/seekBarROM" />
+
     <Button
         android:id="@+id/buttonNext2"
         style="?android:attr/buttonStyleSmall"
@@ -150,13 +159,6 @@
         android:layout_alignParentRight="true"
         android:onClick="setObjective"
         android:text="Next" />
-
-    <TextView
-        android:id="@+id/textViewROMCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/seekBarROM"
-        android:layout_below="@+id/seekBarROM" />
 
 </RelativeLayout>
 </ScrollView>
