Implemented back buttons and updated objective to injuryLookup

--- a/PT_Assistant/res/layout/fragment_plan_notes.xml
+++ b/PT_Assistant/res/layout/fragment_plan_notes.xml
@@ -16,7 +16,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:onClick="backHome"
-        android:text="Back to SOAP Home" />
+        android:text="Back to Main Menu" />
 
     <EditText
         android:id="@+id/editPlanNotes"
