--- a/PT_Assistant/res/layout/fragment_treatment_plan.xml
+++ b/PT_Assistant/res/layout/fragment_treatment_plan.xml
@@ -2,9 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
-<RelativeLayout
+<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="445dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -167,6 +167,16 @@
         android:layout_alignBottom="@+id/instructIntReps"
         android:layout_toRightOf="@+id/instructIntReps"
         android:text=" times for " />
+
+    <Button
+        android:id="@+id/buttonMain"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/exerciseThree"
+        android:onClick="backToMain"
+        android:text="Main Menu" />
 
 </RelativeLayout>
 </ScrollView>
