--- a/PT_Assistant/res/layout/fragment_objective_notes.xml
+++ b/PT_Assistant/res/layout/fragment_objective_notes.xml
@@ -1,9 +1,7 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-
 <RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="446dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -11,6 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.pt_assistant.ObjectiveNotesActivity$PlaceholderFragment" >
+    
+    
 
     <TextView
         android:id="@+id/textViewRom"
@@ -28,7 +28,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignRight="@+id/textViewRom"
         android:layout_below="@+id/textViewRom"
-        android:max="@integer/romMax" />
+        android:max="10" />
 
     <TextView
         android:id="@+id/textViewStrength"
@@ -150,4 +150,3 @@
         android:text="Next" />
 
 </RelativeLayout>
-</ScrollView>
